[gd_scene load_steps=16 format=2]

[ext_resource path="res://BombAndSnake.gd" type="Script" id=1]
[ext_resource path="res://SnakeMainScene.gd" type="Script" id=2]
[ext_resource path="res://Tiles/BackTile1.png" type="Texture" id=3]
[ext_resource path="res://Tiles/Player1.png" type="Texture" id=4]
[ext_resource path="res://Themes/white_ui.tres" type="Theme" id=5]
[ext_resource path="res://Tiles/BackTile2.png" type="Texture" id=6]
[ext_resource path="res://Tiles/Bomb.svg" type="Texture" id=7]
[ext_resource path="res://Tiles/Player2.png" type="Texture" id=8]
[ext_resource path="res://Scripts/PlayerHead.gd" type="Script" id=9]
[ext_resource path="res://Tiles/army-soldier-walking_1.png" type="Texture" id=10]
[ext_resource path="res://Fonts/UI-font-bold.tres" type="DynamicFont" id=11]
[ext_resource path="res://Fonts/sarasa-ui-bold.tres" type="DynamicFontData" id=12]

[sub_resource type="TileSet" id=1]
0/name = "BackTile1.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 100, 100 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "BackTile2.png 1"
1/texture = ExtResource( 6 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 100, 100 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "Bomb.svg 0"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 100, 100 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Player1.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 100, 100 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Player2.png 2"
2/texture = ExtResource( 8 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 100, 100 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[sub_resource type="DynamicFont" id=3]
size = 15
font_data = ExtResource( 12 )

[node name="GameController" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = 1.0
margin_top = 3.0
margin_right = 641.0
margin_bottom = 703.0
color = Color( 0.0196078, 0.423529, 0.027451, 1 )

[node name="BoardMap" type="TileMap" parent="."]
position = Vector2( 70, 50 )
tile_set = SubResource( 1 )
cell_size = Vector2( 100, 100 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 1, 0, 2, 0, 0, 3, 1, 0, 4, 0, 0, 65536, 1, 0, 65537, 0, 0, 65538, 1, 0, 65539, 0, 0, 65540, 1, 0, 131072, 0, 0, 131073, 1, 0, 131074, 0, 0, 131075, 1, 0, 131076, 0, 0, 196608, 1, 0, 196609, 0, 0, 196610, 1, 0, 196611, 0, 0, 196612, 1, 0, 262144, 0, 0, 262145, 1, 0, 262146, 0, 0, 262147, 1, 0, 262148, 0, 0 )

[node name="BombAndSnake" type="TileMap" parent="BoardMap"]
tile_set = SubResource( 2 )
cell_size = Vector2( 100, 100 )
format = 1
script = ExtResource( 1 )

[node name="Player1" type="Sprite" parent="BoardMap/BombAndSnake"]
position = Vector2( 679, 48 )
scale = Vector2( -1, 1 )
texture = ExtResource( 10 )
script = ExtResource( 9 )

[node name="Player2" type="Sprite" parent="BoardMap/BombAndSnake"]
position = Vector2( 683, 182 )
texture = ExtResource( 10 )
script = ExtResource( 9 )

[node name="PlayerScore1" type="Label" parent="BoardMap/BombAndSnake"]
margin_left = -60.0
margin_top = 1.0
margin_right = -7.0
margin_bottom = 89.0
theme = ExtResource( 5 )
text = "0"
align = 1
valign = 1

[node name="PlayerScore2" type="Label" parent="BoardMap/BombAndSnake"]
margin_left = 508.0
margin_top = 5.0
margin_right = 563.0
margin_bottom = 98.0
theme = ExtResource( 5 )
text = "0"
align = 1
valign = 1

[node name="GameStatusLabel" type="Label" parent="."]
margin_left = 173.0
margin_top = 5.0
margin_right = 468.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 11 )
text = "Placing Bombs"
align = 1
valign = 1
autowrap = true

[node name="GameStartButton" type="Button" parent="."]
margin_left = 219.0
margin_top = 579.0
margin_right = 419.0
margin_bottom = 649.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Start Game"

[node name="GameFinishedPanel" type="Panel" parent="."]
visible = false
margin_left = 170.0
margin_top = 151.0
margin_right = 471.0
margin_bottom = 447.0

[node name="Label" type="Label" parent="GameFinishedPanel"]
margin_left = 59.0
margin_top = 20.0
margin_right = 245.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 11 )
text = "Game Finished!"
align = 1
valign = 1

[node name="Bombed" type="Label" parent="GameFinishedPanel"]
margin_left = 74.0
margin_top = 117.0
margin_right = 224.0
margin_bottom = 162.0

[node name="PlayAgainButton" type="Button" parent="GameFinishedPanel"]
margin_left = 75.0
margin_top = 223.0
margin_right = 231.0
margin_bottom = 274.0
custom_fonts/font = ExtResource( 11 )
text = "Play Again"

[node name="BackMenuButton" type="Button" parent="GameFinishedPanel"]
margin_left = 73.0
margin_top = 167.0
margin_right = 231.0
margin_bottom = 213.0
custom_fonts/font = SubResource( 3 )
text = "Return To Menu"

[connection signal="pressed" from="GameStartButton" to="." method="_on_GameStartButton_pressed"]
[connection signal="pressed" from="GameFinishedPanel/PlayAgainButton" to="." method="_on_PlayAgainButton_pressed"]
[connection signal="pressed" from="GameFinishedPanel/BackMenuButton" to="." method="_on_BackMenuButton_pressed"]
